# Spacial-MPC

./: DEFAULT_FASTRTPS_PROFILE.xml  MPC_test.m  MPC_test.py  MPC_with_sim_test.m  README.md  README.me  carODE.m  circle_road.mat  configureWSL2.m  costFcn.m  dbike_model.asv  dbike_model.m  dnMPC_test.asv  dnMPC_test.m  generateTrackLookup.m  knState.m  nonlcons.m  plot_stuff.m  plt_bike.m  point_mass_mpc.mat  point_mass_test.slx  ros_echo_test.m  ros_mpc_connection.asv  ros_mpc_connection.m  runMPC.m  stateChange.m  stateChangeBig.asv  stateChangeBig.m  stateFcn.asv  this workspace breakes the state change functions 2.mat  track.m
code/: EMPC_test.m  SEMPC_test.m  costFcn.m  costFcn_s.m  stateFcn.m  stateFcn_s.m
functions/: all_functions.m  all_functions.py  costFcn.m  dbike_model.m  getnp.m  nonlcons.m  runMPC.m  track2world.m  track_msg_loc.m
geometry2-ros2/driverless_msgs/: CMakeLists.txt  package.xml
geometry2-ros2/driverless_msgs/msg/: MPCPathPoint.msg
geometry2-ros2/matlab_msg_gen/win64/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
geometry2-ros2/matlab_msg_gen/win64/install/include/ackermann_msgs/: visibility_control.h
geometry2-ros2/matlab_msg_gen/win64/install/include/ackermann_msgs/msg/: ackermann_drive.h  ackermann_drive.hpp  ackermann_drive__rosidl_typesupport_fastrtps_c.h  ackermann_drive__rosidl_typesupport_introspection_cpp.hpp  ackermann_drive__struct.hpp  ackermann_drive__traits.hpp  ackermann_drive__type_support.cpp
geometry2-ros2/matlab_msg_gen/win64/install/include/driverless_msgs/: visibility_control.h
geometry2-ros2/matlab_msg_gen/win64/install/include/driverless_msgs/msg/: can.h  can.hpp  can__functions.c  can__functions.h  can__rosidl_typesupport_fastrtps_cpp.hpp  can__rosidl_typesupport_introspection_c.h  can__rosidl_typesupport_introspection_cpp.hpp  can__struct.hpp  can__type_support.cpp  cone.h  cone__functions.c  cone__functions.h  cone__rosidl_typesupport_fastrtps_c.h  cone__rosidl_typesupport_introspection_c.h  cone__rosidl_typesupport_introspection_cpp.hpp  cone__struct.h  cone__traits.hpp  cone_detection_stamped.h  cone_detection_stamped.hpp  (+64 more)
geometry2-ros2/matlab_msg_gen/win64/install/include/tf2_msgs/: visibility_control.h
geometry2-ros2/matlab_msg_gen/win64/install/lib/: ackermann_msgs__rosidl_generator_c.lib  ackermann_msgs__rosidl_typesupport_c.lib  ackermann_msgs__rosidl_typesupport_cpp.lib  ackermann_msgs__rosidl_typesupport_fastrtps_c.lib  ackermann_msgs__rosidl_typesupport_fastrtps_cpp.lib  ackermann_msgs__rosidl_typesupport_introspection_cpp.lib  driverless_msgs__rosidl_generator_c.lib  driverless_msgs__rosidl_typesupport_c.lib  driverless_msgs__rosidl_typesupport_cpp.lib  driverless_msgs__rosidl_typesupport_fastrtps_c.lib  driverless_msgs_matlab.lib  tf2_msgs__python.lib  tf2_msgs__rosidl_typesupport_c.lib  tf2_msgs_matlab.lib
geometry2-ros2/matlab_msg_gen/win64/install/share/ackermann_msgs/: local_setup.bat  package.bat  package.ps1
geometry2-ros2/matlab_msg_gen/win64/install/share/driverless_msgs/: local_setup.bat  package.bat  package.ps1  package.xml
geometry2-ros2/matlab_msg_gen/win64/install/share/tf2_msgs/: package.bat  package.ps1
geometry2-ros2/matlab_msg_gen/win64/src/ackermann_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
geometry2-ros2/matlab_msg_gen/win64/src/ackermann_msgs/include/ackermann_msgs/: visibility_control.h
geometry2-ros2/matlab_msg_gen/win64/src/ackermann_msgs/m/+ros/+internal/+ros2/+custommessages/+ackermann_msgs/: ackermannDrive.m
geometry2-ros2/matlab_msg_gen/win64/src/ackermann_msgs/src/: ackermann_msgs_AckermannDrive_message.cpp
geometry2-ros2/matlab_msg_gen/win64/src/driverless_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
geometry2-ros2/matlab_msg_gen/win64/src/driverless_msgs/include/driverless_msgs/: visibility_control.h
geometry2-ros2/matlab_msg_gen/win64/src/driverless_msgs/m/+ros/+internal/+ros2/+custommessages/+driverless_msgs/: cone.m  coneWithCovariance.m  driverless_msgs_msg_Can_1To2_Converter.m  driverless_msgs_msg_ConeDetectionStamped_1To2_Converter.m  driverless_msgs_msg_ConeDetectionStamped_2To1_Converter.m  driverless_msgs_msg_ConeWithCovariance_1To2_Converter.m  driverless_msgs_msg_Cone_2To1_Converter.m  driverless_msgs_msg_MPCCenterline_1To2_Converter.m  driverless_msgs_msg_MPCPathPoint_2To1_Converter.m  driverless_msgs_msg_MPCState_2To1_Converter.m  driverless_msgs_msg_PathPoint_1To2_Converter.m  driverless_msgs_msg_PathPoint_2To1_Converter.m  driverless_msgs_msg_RES_2To1_Converter.m  driverless_msgs_msg_Reset_1To2_Converter.m  driverless_msgs_msg_Reset_2To1_Converter.m  driverless_msgs_msg_TrackDetectionStamped_1To2_Converter.m  mPCPathPoint.m  mPCState.m  pathPoint.m  rES.m
geometry2-ros2/matlab_msg_gen/win64/src/driverless_msgs/src/: driverless_msgs_Can_message.cpp  driverless_msgs_ConeDetectionStamped_message.cpp  driverless_msgs_ConeWithCovariance_message.cpp  driverless_msgs_Cone_message.cpp  driverless_msgs_MPCCenterline_message.cpp  driverless_msgs_MPCPathPoint_message.cpp  driverless_msgs_MPCState_message.cpp  driverless_msgs_PathPoint_message.cpp  driverless_msgs_PathStamped_message.cpp  driverless_msgs_RES_message.cpp  driverless_msgs_Reset_message.cpp  driverless_msgs_SelectMission_service.cpp  driverless_msgs_TrackDetectionStamped_message.cpp
geometry2-ros2/matlab_msg_gen/win64/src/tf2_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
geometry2-ros2/matlab_msg_gen/win64/src/tf2_msgs/src/: tf2_msgs_FrameGraph_service.cpp  tf2_msgs_TF2Error_message.cpp  tf2_msgs_TFMessage_message.cpp
old/: MPC_expand_test.m  knMPC_test.m
slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s3bEph3RHLTKyONvd8hSgcD.mat  sVbaPAwH9UIZoGsUAUkirI.mat  semXZKYmE92ptvC3RNiL8s.mat  sh25Kmg9qr3NWc5TInuhI2C.mat  siqVAleMzSlGOOrE4gU2W9.mat  st5ySXspQo4VTDeUbX4CCTG.mat  szvVJ5g7sHspW59ZCzSW63.mat
slprj/_sfprj/untitled/: amsi_serial.mat
slprj/_sfprj/untitled/_self/sfun/info/: binfo.mat
workspaces/: this workspace breakes the state change function.mat  track_from_sim.mat
(+68 files in other folders)
